kustomize/overlay/prod/test2-startup2-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: test2-startup2-prod
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_760c6284-25ec-438d-bb16-072233a992ed
    environmentId: env_9ed672d2-4882-4dfe-bae5-cb2537a9c13e
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_9ed672d2-4882-4dfe-bae5-cb2537a9c13e
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
